--- a/src/styles/element-variables.scss
+++ b/src/styles/element-variables.scss
@@ -88,3 +88,16 @@ $--font-path: '~element-ui/lib/theme-chalk/fonts';
 .el-form-item.clear-margin-left .el-form-item__content{
   margin-left: 0px !important;
 }
+.myMenu .el-menu-item.is-active {
+  background: #f5f5f7;
+  border-left: 3px solid red;
+  box-sizing: border-box;
+}
+.myForm .el-form-item{
+margin-bottom: 5px;
+}
+.myForm .el-form-item__error{
+  padding: 2px 0;
+  position: relative;
+  top:0;
+}
